<resources>
    <string name="app_name">Lesson05</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Multiply">*</string>
    <string name="_0">0</string>
    <string name="Dot">.</string>
    <string name="Divide">/</string>
    <string name="Equal">=</string>
    <string name="Inputhint">Введите формулу</string>
    <string name="PositiveButtonText">Ок</string>
    <string name="Menu_Settings">Настройки</string>
    <string name="DarkModeSwitch">Темная тема</string>
    <string name="MenuSettingsTitle">Настройки приложения</string>
    <string name="clearDesktop">Очистить экран</string>
    <string name="textAlertDialogClearText">Начать вычисления заново</string>
    <string name="txtCancel">Отмена</string>
</resources>